WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.4.1-rc2, 2013-05-12


This document lists all changes for each version.

For a list of important changes that require manual action, please look at
http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
(file 'NEWS' in sources).


Version 0.4.1 (under dev!)
--------------------------

* core: fix display of long lines without time (message beginning with two tabs)
* core: make nick prefix/suffix dynamic (not stored in the line): move options
  irc.look.nick_{prefix|suffix} to weechat.look.nick_{prefix|suffix} and options
  irc.color.nick_{prefix|suffix} to weechat.color.chat_nick_{prefix|suffix},
  add new options weechat.look.prefix_align_more_after,
  weechat.look.prefix_buffer_align_more_after, logger.file.nick_{prefix|suffix}
  (bug #37531)
* core: reset scroll in window before zooming on a merged buffer (bug #38207)
* core: install icon file (patch #7972)
* core: fix refresh of item "completion": clear it after any action that is
  changing content of command line and after switch of buffer (bug #38214)
* core: add support of multiple layouts (task #11274)
* core: add signals nicklist_{group|nick}_removing and hsignals
  nicklist_{group|nick}_{added|removing|changed}
* core: add count for groups, nicks, and total in nicklist
* core: allow read of array in hdata without using index
* core: add option "dirs" for command /debug
* core: fix detection of iconv with cmake on OS X (bug #38321)
* core: add signal "window_opened" (task #12464)
* core: fix structures before buffer data when a buffer is closed
* core: fix refresh of line after changes with hdata_update (update flag
  "displayed" according to filters)
* core: fix detection of python on Ubuntu Raring
* core: fix hidden lines for messages without date when option
  weechat.history.max_buffer_lines_minutes is set (bug #38197)
* core: use default hash/comparison callback for keys of type