@@ -14,6 +14,8 @@ http://weechat.org/files/releasenotes/ReleaseNotes-devel.html[release notes]
 Version 0.4.1 (under dev!)
 --------------------------
 
+* core: add infolist "layout" and hdata "layout", "layout_buffer" and
+  "layout_window"
 * core: fix display of long lines without time (message beginning with two tabs)
 * core: make nick prefix/suffix dynamic (not stored in the line): move options
   irc.look.nick_{prefix|suffix} to weechat.look.nick_{prefix|suffix} and options
